# project3

./: README.txt  comp_phys_project_3.tex  custom_mcmc.py  main.py  pyproject.toml
RadialDist/: __init__.py  custom_and _emcee_compar.py  custom_mcmc.py  emcee_mcmc.py  simulation.py
RadialDist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
