
[project]
name = "RadialDist"
version = "1.6.0"
dependencies = [
   "numpy",
   "scipy",
   "tqdm",
   "emcee"
]
authors = [
  { name="Kevin Mesta", email="kmmesta@syr.edu" },
  { name="Sara Talebi", email="stalebi@syr.edu" },
]
description = "MCMC Simulation for 3s orbital"

readme = "README.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]

main_script = "RadialDist:mainprogram"
emcee_script = "RadialDist:emcee_program"
autocorr_step = "RadialDist:autocorr_vs_stepsize"
