
[project]
name = "RadialDist"
version = "2.1.3"
dependencies = [
   "numpy",
   "scipy",
   "tqdm",
   "emcee"
]
authors = [
  { name="Kevin Mesta", email="kmmesta@syr.edu" },
  { name="Sara Talebi", email="stalebi@syr.edu" },
]
description = "MCMC Simulation for 3s orbital"

readme = "README.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]

main_script = "RadialDist:mainprogram"
emcee_script = "RadialDist:emcee_program"
autocorr_step = "RadialDist:autocorr_vs_stepsize"
converge_test = "RadialDist:convergence_test_emcee_custom"
burn_in = "RadialDist:burn_in_periods"
